--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "autoload": {
     "psr-4": {
-      "efrogg\\Coverage\\": "src/Coverage/"
+      "Efrogg\\Coverage\\": "src/Coverage/"
     }
   },
   "require": {
